📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -7910,5 +7910,149 @@
         "published": "Thu, 11 Dec 2025 10:38:51 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46229766\">Comments</a>"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/11/interest-in-spoors-bird-monitoring-ai-software-is-soaring/",
+        "title": "Interest in Spoor\u2019s bird monitoring AI software is soaring",
+        "link": "https://techcrunch.com/2025/12/11/interest-in-spoors-bird-monitoring-ai-software-is-soaring/",
+        "published": "Thu, 11 Dec 2025 13:00:00 +0000",
+        "source": "TechCrunch",
+        "summary": "Spoor's computer vision software can help wind farms, and other industries, track bird populations and migration patterns."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/11/eclipse-energys-microbes-can-turn-idle-oil-wells-into-hydrogen-factories/",
+        "title": "Eclipse Energy\u2019s microbes can turn idle oil wells into hydrogen factories",
+        "link": "https://techcrunch.com/2025/12/11/eclipse-energys-microbes-can-turn-idle-oil-wells-into-hydrogen-factories/",
+        "published": "Thu, 11 Dec 2025 13:00:00 +0000",
+        "source": "TechCrunch",
+        "summary": "The biotech startup is betting that owners of abandoned oil wells will use the tech to squeeze energy out of their wells."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/11/opera-wants-you-to-pay-20-a-month-to-use-its-ai-powered-browser-neon/",
+        "title": "Opera wants you to pay $20 a month to use its AI-powered browser Neon",
+        "link": "https://techcrunch.com/2025/12/11/opera-wants-you-to-pay-20-a-month-to-use-its-ai-powered-browser-neon/",
+        "published": "Thu, 11 Dec 2025 13:00:00 +0000",
+        "source": "TechCrunch",
+        "summary": "Following a couple of months' testing, Opera has finally made its AI-powered browser, Neon, available to the public \u2014 though you'll have to shell out for a $19.90-per-month subscription to use it."
+    },
+    {
+        "id": "https://www.theverge.com/games/841710/the-game-awards-2025-preview-geoff-keighley",
+        "title": "The Game Awards are losing their luster",
+        "link": "https://www.theverge.com/games/841710/the-game-awards-2025-preview-geoff-keighley",
+        "published": "2025-12-11T08:00:00-05:00",
+        "source": "The Verge",
+        "summary": "It's Game Awards season, y'all. That special time of the year when we gather together to celebrate video games and the people who make them\u2026 by watching expensive commercials briefly punctuated by the odd awards speech or musical performance. For better or worse, The Game Awards is the biggest night on the video game event [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/gallery/best-costco-tvs/",
+        "title": "6 Best Costco TVs That We\u2019ve Tried and Recommend (2025)",
+        "link": "https://www.wired.com/gallery/best-costco-tvs/",
+        "published": "Thu, 11 Dec 2025 13:00:00 +0000",
+        "source": "WIRED",
+        "summary": "Costco fans rejoice. We\u2019ve found great deals on televisions exclusively for members."
+    },
+    {
+        "id": "https://www.wired.com/story/operation-bluebird-wants-to-bring-twitter-back-to-life/",
+        "title": "Operation Bluebird Wants to Bring \u2018Twitter\u2019 Back to Life",
+        "link": "https://www.wired.com/story/operation-bluebird-wants-to-bring-twitter-back-to-life/",
+        "published": "Thu, 11 Dec 2025 13:00:00 +0000",
+        "source": "WIRED",
+        "summary": "Elon Musk \u201cbid adieu to the Twitter brand\u201d in 2023 in favor of X. A startup wants to resurrect it."
+    },
+    {
+        "id": "https://www.wired.com/story/best-merino-wool-clothes/",
+        "title": "Best Merino Wool Clothing (2025): Base Layers, Hoodies, Jackets & More",
+        "link": "https://www.wired.com/story/best-merino-wool-clothes/",
+        "published": "Thu, 11 Dec 2025 12:30:00 +0000",
+        "source": "WIRED",
+        "summary": "Merino is one of the best fabrics you can wear. We explain the different blends, what \u201cgsm\u201d means, and how to care for your clothes."
+    },
+    {
+        "id": "https://www.engadget.com/ai/googles-gemini-ai-comes-to-chrome-on-iphone-and-ipad-130003432.html?src=rss",
+        "title": "Google's Gemini AI comes to Chrome on iPhone and iPad",
+        "link": "https://www.engadget.com/ai/googles-gemini-ai-comes-to-chrome-on-iphone-and-ipad-130003432.html?src=rss",
+        "published": "Thu, 11 Dec 2025 13:00:03 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>After rolling it out on desktop and Android <a href=\"https://www.engadget.com/ai/google-is-bringing-gemini-to-chrome-so-it-can-answer-questions-about-your-open-tabs-174903787.html\">earlier in 2025</a>, Google is finally <a href=\"https://support.google.com/chrome/answer/16283624\">bringing</a> its built-in Gemini AI experience to iPhone and iPad. It offers new features like summarizing pages and helping you test your knowledge about a subject you're learning. As with any AI tool, though, it sho"
+    },
+    {
+        "id": "https://gizmodo.com/this-worm-was-chilling-in-a-lab-for-years-turns-out-its-a-record-breaker-2000698043",
+        "title": "This Worm Was Chilling in a Lab for Years. Turns Out It\u2019s a Record-Breaker",
+        "link": "https://gizmodo.com/this-worm-was-chilling-in-a-lab-for-years-turns-out-its-a-record-breaker-2000698043",
+        "published": "Thu, 11 Dec 2025 13:30:33 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Jonathan Allen B Ribbon Worm On Hand\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/12/jonathan-allen-b-ribbon-worm-on-hand.jpg\" width=\"1920\" /><br /><br />His name is B, and he lives in Virginia."
+    },
+    {
+        "id": "https://gizmodo.com/from-hack-to-hijack-thieves-hit-the-vape-truck-steal-1-million-worth-of-e-cigs-2000698051",
+        "title": "From Hack to Hijack: Thieves Hit the Vape Truck, Steal $1 Million Worth of E-Cigs",
+        "link": "https://gizmodo.com/from-hack-to-hijack-thieves-hit-the-vape-truck-steal-1-million-worth-of-e-cigs-2000698051",
+        "published": "Thu, 11 Dec 2025 12:30:48 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Vapes\" class=\"attachment-full size-full wp-post-image\" height=\"1080\" src=\"https://gizmodo.com/app/uploads/2025/06/vapes-e1765408442574.jpg\" width=\"1622\" /><br /><br />Up in smoke."
+    },
+    {
+        "id": "https://mashable.com/video/seth-meyers-closer-look-economy-trump",
+        "title": "Seth Meyers takes A Closer Look at Trumps U.S. economy and its not A+++++",
+        "link": "https://mashable.com/video/seth-meyers-closer-look-economy-trump",
+        "published": "Thu, 11 Dec 2025 12:35:49 +0000",
+        "source": "Mashable",
+        "summary": "Seth Meyers used his \"A Closer Look\" segment on Late Night to examine the current state of the U.S. economy, and it's not the A+++++ President Donald Trump awarded himself with."
+    },
+    {
+        "id": "https://mashable.com/video/michelle-pfeiffer-batman-returns-christmas-movie",
+        "title": "Michelle Pfeiffer and Oh. What. Fun. cast play Does It Ring Christmas?",
+        "link": "https://mashable.com/video/michelle-pfeiffer-batman-returns-christmas-movie",
+        "published": "Thu, 11 Dec 2025 12:24:48 +0000",
+        "source": "Mashable",
+        "summary": "We get into what makes a Christmas movie with 'Oh. What. Fun.'s Michelle Pfeiffer, Denis Leary, Chlo\u00eb Grace Moretz, Felicity Jones, and Dominic Sessa."
+    },
+    {
+        "id": "https://mashable.com/article/dec-11-tmobile-free-iphone-17-deal",
+        "title": "Score a free Apple iPhone 17 right now with T-Mobile \u2014 how to qualify for this wild offer",
+        "link": "https://mashable.com/article/dec-11-tmobile-free-iphone-17-deal",
+        "published": "Thu, 11 Dec 2025 12:14:51 +0000",
+        "source": "Mashable",
+        "summary": "T-Mobile is giving away a free Apple iPhone 17 ($830 off). No trade is required with a new line and port on Experience Beyond\u200b."
+    },
+    {
+        "id": "https://mashable.com/video/stephen-colbert-trump-pencils-economy",
+        "title": "Stephen Colbert ridicules Trumps advice that Americans should give up pencils to save money",
+        "link": "https://mashable.com/video/stephen-colbert-trump-pencils-economy",
+        "published": "Thu, 11 Dec 2025 12:08:22 +0000",
+        "source": "Mashable",
+        "summary": "Stephen Colbert unpacked Donald Trump's statement that Americans should \"give up pencils\" to save money in a turbulent economy."
+    },
+    {
+        "id": "https://readwrite.com/indian-tribes-agreement-washington-gambling-commission-electronic-gaming/",
+        "title": "Indian Tribes reach tentative agreement with Washington Gambling Commission on new electronic gaming proposals",
+        "link": "https://readwrite.com/indian-tribes-agreement-washington-gambling-commission-electronic-gaming/",
+        "published": "Thu, 11 Dec 2025 13:21:25 +0000",
+        "source": "ReadWrite",
+        "summary": "<div><img alt=\"A split-image showing the Washington State Capitol building at sunset on the left, with a lit pathway and surrounding trees, and a close-up view of colorful illuminated electronic gaming machine controls on the right, representing government and casino gaming themes. Indian Tribes reach tentative agreement with Washington Gambling Commission on new electronic gaming proposals\" class=\"attachment-medium size-medium wp-post-image\" height=\"200\" src=\"https://readwrite.com/wp-content/up"
+    },
+    {
+        "id": "https://www.zdnet.com/article/comcast-new-xfinity-tv-plans-no-contract-hidden-fees/",
+        "title": "Comcast just killed hidden fees with new contract-free TV plans - starting at $55",
+        "link": "https://www.zdnet.com/article/comcast-new-xfinity-tv-plans-no-contract-hidden-fees/",
+        "published": "Thu, 11 Dec 2025 13:16:08 GMT",
+        "source": "Latest news",
+        "summary": "The new Xfinity TV plans keep it simple with one up-front pricing. There's not even equipment rental charges."
+    },
+    {
+        "id": "https://www.theguardian.com/global-development/2025/dec/11/meta-shuts-down-global-accounts-linked-to-abortion-advice-and-queer-content",
+        "title": "Meta shuts down global accounts linked to abortion advice and queer content",
+        "link": "https://www.theguardian.com/global-development/2025/dec/11/meta-shuts-down-global-accounts-linked-to-abortion-advice-and-queer-content",
+        "published": "Thu, 11 Dec 2025 11:26:45 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46230072\">Comments</a>"
+    },
+    {
+        "id": "https://github.com/privacyshield-ai/privacy-firewall",
+        "title": "Show HN: Local Privacy Firewall-blocks PII and secrets before ChatGPT sees them",
+        "link": "https://github.com/privacyshield-ai/privacy-firewall",
+        "published": "Tue, 09 Dec 2025 16:10:37 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46206591\">Comments</a>"
     }
 ]
