📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -8054,5 +8054,93 @@
         "published": "Tue, 09 Dec 2025 16:10:37 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46206591\">Comments</a>"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/11/security-flaws-in-freedom-chat-app-exposed-users-phone-numbers-and-pins/",
+        "title": "Security flaws in Freedom Chat app exposed users\u2019 phone numbers and PINs",
+        "link": "https://techcrunch.com/2025/12/11/security-flaws-in-freedom-chat-app-exposed-users-phone-numbers-and-pins/",
+        "published": "Thu, 11 Dec 2025 13:35:08 +0000",
+        "source": "TechCrunch",
+        "summary": "The founder of Freedom Chat said the company has reset user PINs and released a new version to app stores."
+    },
+    {
+        "id": "https://www.wired.com/gallery/best-samsung-phones/",
+        "title": "The Best Samsung Phones of 2025, Tested and Reviewed",
+        "link": "https://www.wired.com/gallery/best-samsung-phones/",
+        "published": "Thu, 11 Dec 2025 14:00:00 +0000",
+        "source": "WIRED",
+        "summary": "From flagship and budget to flipping and folding, Samsung\u2019s Galaxy range spans the breadth of the smartphone cosmos. WIRED\u2019s here to help you make your choice."
+    },
+    {
+        "id": "https://www.engadget.com/gaming/nintendo/warios-one-and-only-3d-platformer-is-now-playable-on-switch-2-133011950.html?src=rss",
+        "title": "Wario\u2019s one and only 3D platformer is now playable on Switch 2",
+        "link": "https://www.engadget.com/gaming/nintendo/warios-one-and-only-3d-platformer-is-now-playable-on-switch-2-133011950.html?src=rss",
+        "published": "Thu, 11 Dec 2025 13:30:11 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Nintendo has been slowly drip-feeding us <a href=\"https://www.engadget.com/gaming/nintendo/the-nintendo-switch-2-will-play-gamecube-games-141025334.html\"><ins>GameCube</ins></a> games since the console joined its Nintendo Classics offering when the <a href=\"https://www.engadget.com/gaming/nintendo/nintendo-switch-2-review-more-of-what-you-love-120048430.html\"><ins>Switch 2</ins></a> launched in June, and we just got another one. Switch Online + Expansion Pack subscribers can now play Wario\u2019s "
+    },
+    {
+        "id": "https://www.engadget.com/deals/pick-up-our-favorite-anker-magsafe-power-bank-while-its-on-sale-for-34-percent-off-151039668.html?src=rss",
+        "title": "Pick up our favorite Anker MagSafe power bank while it's on sale for 34 percent off",
+        "link": "https://www.engadget.com/deals/pick-up-our-favorite-anker-magsafe-power-bank-while-its-on-sale-for-34-percent-off-151039668.html?src=rss",
+        "published": "Thu, 11 Dec 2025 13:28:53 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>If you're traveling for the holidays, there are few things more useful to take with you than a portable charger. Whether you're using your phone for music and navigation on a long drive or music and logistics before, during and after a flight, you'll want it to stay alive for the entire door-to-door journey. A number of our favorites \u2014 like this <a class=\"rapid-with-clickid\" href=\"https://shopping.yahoo.com/rdlw?merchantId=66ea567a-c987-4c2e-a2ff-02904efde6ea&amp;itemId=amazon_B0CFDQ9QH5&amp;"
+    },
+    {
+        "id": "https://gizmodo.com/28-years-later-3-cillian-murphy-2000698389",
+        "title": "The Third \u201928 Years Later\u2019 Movie Is Actually Happening",
+        "link": "https://gizmodo.com/28-years-later-3-cillian-murphy-2000698389",
+        "published": "Thu, 11 Dec 2025 14:00:37 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"28 Years Later Zombie\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/06/28-Years-Later-zombie.jpg\" width=\"1920\" /><br /><br />Danny Boyle directs, Alex Garland writes, and Cillian Murphy is likely to star."
+    },
+    {
+        "id": "https://gizmodo.com/hunger-games-sunrise-on-the-reaping-jennifer-lawrence-josh-hutcherson-2000698322",
+        "title": "The Next \u2018Hunger Games\u2019 Is Bringing Back Jennifer Lawrence and Josh Hutcherson",
+        "link": "https://gizmodo.com/hunger-games-sunrise-on-the-reaping-jennifer-lawrence-josh-hutcherson-2000698322",
+        "published": "Thu, 11 Dec 2025 13:00:56 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Ms 1211 Hunger Games Peeta Katniss\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/12/MS-1211-hunger-games-peeta-katniss.jpg\" width=\"1920\" /><br /><br />Plus, get a tiny glimpse of 'Supergirl' before today's trailer."
+    },
+    {
+        "id": "https://mashable.com/article/dec-11-dji-power-2000-deal",
+        "title": "The DJI Power 2000 portable power station is down to its lowest-ever price \u2014 almost half off",
+        "link": "https://mashable.com/article/dec-11-dji-power-2000-deal",
+        "published": "Thu, 11 Dec 2025 13:58:01 +0000",
+        "source": "Mashable",
+        "summary": "The DJI Power 2000 is on sale at Amazon for $699, down from the list price of $1,299. That's a 46% discount."
+    },
+    {
+        "id": "https://mashable.com/video/daily-show-trump-female-reporters-desi-lydic",
+        "title": "The Daily Show slams Trumps treatment of women journalists",
+        "link": "https://mashable.com/video/daily-show-trump-female-reporters-desi-lydic",
+        "published": "Thu, 11 Dec 2025 13:02:14 +0000",
+        "source": "Mashable",
+        "summary": "\"The Daily Show\" host Desi Lydic took aim at Donald Trump's treatment of female reporters, calling out the president's repeated misogynist insults."
+    },
+    {
+        "id": "https://www.zdnet.com/article/favorite-sites-google-search-top-stories-preferred-sources/",
+        "title": "Google just gave you control over your Search results - how to see your favorite sites first",
+        "link": "https://www.zdnet.com/article/favorite-sites-google-search-top-stories-preferred-sources/",
+        "published": "Thu, 11 Dec 2025 13:50:00 GMT",
+        "source": "Latest news",
+        "summary": "Google now lets you choose which sites appear in Top Stories. Here's how to make ZDNET one of them."
+    },
+    {
+        "id": "https://www.artificialintelligence-news.com/news/microsoft-promptions-fix-ai-prompts-failing-to-deliver/",
+        "title": "Microsoft \u2018Promptions\u2019 fix AI prompts failing to deliver",
+        "link": "https://www.artificialintelligence-news.com/news/microsoft-promptions-fix-ai-prompts-failing-to-deliver/",
+        "published": "Thu, 11 Dec 2025 14:11:36 +0000",
+        "source": "AI News",
+        "summary": "<p>Microsoft believes it has a fix for AI prompts being given, the response missing the mark, and the cycle repeating. This inefficiency is a drain on resources. The &#8220;trial-and-error loop can feel unpredictable and discouraging,&#8221; turning what should be a productivity booster into a time sink. Knowledge workers often spend more time managing the interaction [&#8230;]</p>\n<p>The post <a href=\"https://www.artificialintelligence-news.com/news/microsoft-promptions-fix-ai-prompts-failing-t"
+    },
+    {
+        "id": "https://www.technologyreview.com/2025/12/11/1129288/the-download-solar-geoengineerings-future-and-openai-is-being-sued/",
+        "title": "The Download: solar geoengineering\u2019s future, and OpenAI is being sued",
+        "link": "https://www.technologyreview.com/2025/12/11/1129288/the-download-solar-geoengineerings-future-and-openai-is-being-sued/",
+        "published": "Thu, 11 Dec 2025 13:10:00 +0000",
+        "source": "MIT Technology Review",
+        "summary": "This is today&#8217;s edition of\u00a0The Download,\u00a0our weekday newsletter that provides a daily dose of what&#8217;s going on in the world of technology. Solar geoengineering startups are getting serious Solar geoengineering aims to manipulate the climate by bouncing sunlight back into space. In theory, it could ease global warming. But as interest in the idea grows,&#8230;"
     }
 ]
