📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -8142,5 +8142,157 @@
         "published": "Thu, 11 Dec 2025 13:10:00 +0000",
         "source": "MIT Technology Review",
         "summary": "This is today&#8217;s edition of\u00a0The Download,\u00a0our weekday newsletter that provides a daily dose of what&#8217;s going on in the world of technology. Solar geoengineering startups are getting serious Solar geoengineering aims to manipulate the climate by bouncing sunlight back into space. In theory, it could ease global warming. But as interest in the idea grows,&#8230;"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/11/on-me-raises-6m-to-shake-up-the-gift-card-industry/",
+        "title": "On Me raises $6M to shake up the gift card industry",
+        "link": "https://techcrunch.com/2025/12/11/on-me-raises-6m-to-shake-up-the-gift-card-industry/",
+        "published": "Thu, 11 Dec 2025 15:08:21 +0000",
+        "source": "TechCrunch",
+        "summary": "On Me raises $6 million for its digital gift card platform that lets users purchase cards categorized by interests rather than being restricted to specific retailers."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/11/time-names-architects-of-ai-its-person-of-the-year/",
+        "title": "TIME names \u2018Architects of AI\u2019 its Person of the Year",
+        "link": "https://techcrunch.com/2025/12/11/time-names-architects-of-ai-its-person-of-the-year/",
+        "published": "Thu, 11 Dec 2025 14:38:06 +0000",
+        "source": "TechCrunch",
+        "summary": "TIME Magazine has named the 'Architects of AI' its Person of the Year, who include Jensen Huang, Elon Musk, Sam Altman, Mark Zuckerberg,  Lisa Su,  Dario Amodei, Demis Hassabis, and Fei-Fei Li"
+    },
+    {
+        "id": "https://www.theverge.com/news/842385/uscpsc-recall-iniu-power-bank-overheat-rire-risk-amazon",
+        "title": "Over 200,000 power banks sold on Amazon are being recalled for a fire risk",
+        "link": "https://www.theverge.com/news/842385/uscpsc-recall-iniu-power-bank-overheat-rire-risk-amazon",
+        "published": "2025-12-11T10:08:33-05:00",
+        "source": "The Verge",
+        "summary": "A company called INIU has issued a recall for its BI-B41 10,000mAh power banks because the lithium-ion batteries they use \"can overheat and ignite, posing fire and burn hazards to consumers.\" The company has received 15 reports of the power banks overheating resulting in 11 fires causing over $380,000 in property damage and three minor [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/news/842307/att-connected-life-smart-home-security-google-price",
+        "title": "AT&#038;T\u2019s new home security system is powered by Google Home and Abode",
+        "link": "https://www.theverge.com/news/842307/att-connected-life-smart-home-security-google-price",
+        "published": "2025-12-11T10:00:00-05:00",
+        "source": "The Verge",
+        "summary": "AT&#38;T is launching Connected Life, a new smart home security offering built around Google Home that keeps working during power or internet outages. Connected Life can be self-installed and features smart home cameras from Google Nest and security hardware from Abode, as well as professional monitoring. This follows Google launching APIs for its smart home [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/gadgets/841831/nex-playground-console-deal-holiday-sale",
+        "title": "The kid-friendly console that outsold Xbox during Black Friday is $50 off",
+        "link": "https://www.theverge.com/gadgets/841831/nex-playground-console-deal-holiday-sale",
+        "published": "2025-12-11T09:42:15-05:00",
+        "source": "The Verge",
+        "summary": "The Nex Playground is a motion-controlled, cube-shaped console for ages five and up that\u2019s selling like hotcakes. It came in third for home console sales during Black Friday week, according to sales data shared on Bluesky from Mat Piscatella of Circana, falling behind only Nintendo\u2019s Switch 2 and Sony\u2019s PlayStation 5. That\u2019s an impressive feat [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/news/842348/disney-openai-sora-chatgpt-images",
+        "title": "OpenAI\u2019s billion-dollar Disney deal puts Mickey Mouse and Marvel in Sora",
+        "link": "https://www.theverge.com/news/842348/disney-openai-sora-chatgpt-images",
+        "published": "2025-12-11T09:32:21-05:00",
+        "source": "The Verge",
+        "summary": "A new three-year licensing agreement announced between Disney and ChatGPT operator OpenAI will allow the Sora video generator to create \"user-prompted social videos\" that feature more than 200 characters from Disney, Marvel, Pixar, and Star Wars. According to OpenAI's blog post announcing the deal: Sora will be able to generate short, user-prompted social videos that [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/story/att-connected-life-platform-launches-nationwide/",
+        "title": "AT&T\u2019s Connected Life Platform Is a Second Try in the Smart-Home Space",
+        "link": "https://www.wired.com/story/att-connected-life-platform-launches-nationwide/",
+        "published": "Thu, 11 Dec 2025 15:00:00 +0000",
+        "source": "WIRED",
+        "summary": "The carrier\u2019s Connected Life platform, now available nationwide, lets AT&amp;T customers easily set up a smart-home security system."
+    },
+    {
+        "id": "https://www.wired.com/gallery/best-smart-christmas-lights/",
+        "title": "6 Best Smart Christmas Lights (2025): Twinkly, Govee, Cync",
+        "link": "https://www.wired.com/gallery/best-smart-christmas-lights/",
+        "published": "Thu, 11 Dec 2025 14:36:00 +0000",
+        "source": "WIRED",
+        "summary": "Control these smart lights with a voice command or a tap on your phone. Now that\u2019s a Christmas miracle."
+    },
+    {
+        "id": "https://arstechnica.com/information-technology/2025/12/oracle-shares-slide-on-15b-increase-in-data-center-spending/",
+        "title": "Oracle shares slide on $15B increase in data center spending",
+        "link": "https://arstechnica.com/information-technology/2025/12/oracle-shares-slide-on-15b-increase-in-data-center-spending/",
+        "published": "Thu, 11 Dec 2025 14:39:21 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "Company raises its capital expenditure forecast as it doubles down on AI infrastructure bet."
+    },
+    {
+        "id": "https://www.engadget.com/ai/openai-signs-deal-to-bring-disney-characters-to-sora-and-chatgpt-144344820.html?src=rss",
+        "title": "OpenAI signs deal to bring Disney characters to Sora and ChatGPT",
+        "link": "https://www.engadget.com/ai/openai-signs-deal-to-bring-disney-characters-to-sora-and-chatgpt-144344820.html?src=rss",
+        "published": "Thu, 11 Dec 2025 14:43:44 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>It looks like Disney wasted no time delivering on CEO <a class=\"link\" href=\"https://www.engadget.com/entertainment/streaming/disney-may-start-hosting-user-generated-ai-videos-185000745.html\" target=\"_blank\">Bob Iger\u2019s promise</a> to bring AI-generated content to Disney+. On Thursday, the company announced the start of a three-year licensing <a class=\"link\" href=\"https://thewaltdisneycompany.com/disney-openai-sora-agreement/\" target=\"_blank\">agreement with OpenAI</a> to bring more than 200 of "
+    },
+    {
+        "id": "https://gizmodo.com/disney-openai-sora-deal-slop-2000698409",
+        "title": "Disney\u2019s AI Slop Era Is Here",
+        "link": "https://gizmodo.com/disney-openai-sora-deal-slop-2000698409",
+        "published": "Thu, 11 Dec 2025 15:01:02 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Toy Story Emperor Zurg\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/12/toy-story-emperor-zurg.jpg\" width=\"1920\" /><br /><br />The studio has announced a landmark deal and $1 billion investment with OpenAI to bring hundreds of Disney characters to its generative AI platforms."
+    },
+    {
+        "id": "https://gizmodo.com/mcon-review-you-wont-find-a-more-compact-mobile-controller-2000697987",
+        "title": "MCON Review: You Won\u2019t Find a More Compact Mobile Controller",
+        "link": "https://gizmodo.com/mcon-review-you-wont-find-a-more-compact-mobile-controller-2000697987",
+        "published": "Thu, 11 Dec 2025 14:50:54 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Mcon Mobile Controller 14\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/12/mcon-mobile-controller-14.jpg\" width=\"1920\" /><br /><br />Despite slighly odd ergonomics, the MCON will turn your phone into the handheld you want it to be."
+    },
+    {
+        "id": "https://mashable.com/article/dec-11-amazon-fire-tv-stick-4k-select-deal",
+        "title": "Amazons $9.99 Fire TV Stick 4K Select deal from Black Friday is back",
+        "link": "https://mashable.com/article/dec-11-amazon-fire-tv-stick-4k-select-deal",
+        "published": "Thu, 11 Dec 2025 14:02:36 +0000",
+        "source": "Mashable",
+        "summary": "The Amazon Fire TV Stick 4K Select is back down to its $9.99 Black Friday price with a coupon code. Grab it before the deal disappears."
+    },
+    {
+        "id": "https://readwrite.com/underdog-shutting-down-sports-betting-north-carolina/",
+        "title": "Underdog confirmed to be shutting down sports betting in North Carolina",
+        "link": "https://readwrite.com/underdog-shutting-down-sports-betting-north-carolina/",
+        "published": "Thu, 11 Dec 2025 14:18:16 +0000",
+        "source": "ReadWrite",
+        "summary": "<div><img alt=\"Underdog logo against a black background. Underdog confirmed to be shutting down sports betting in North Carolina\" class=\"attachment-medium size-medium wp-post-image\" height=\"200\" src=\"https://readwrite.com/wp-content/uploads/2025/12/ATS-20-300x200.png\" style=\"width: 100%; height: 66.67%; margin-bottom: 15px;\" width=\"300\" /></div>\n<p>Underdog is shutting down its sports wagering operations in the state of North Carolina next week, as confirmed by the&#8230; <a class=\"more-link\" hr"
+    },
+    {
+        "id": "https://www.zdnet.com/article/i-asked-chatgpt-to-write-me-a-year-end-review-heres-what-it-told-me/",
+        "title": "How well does ChatGPT know me? This simple prompt revealed a lot - try it for yourself",
+        "link": "https://www.zdnet.com/article/i-asked-chatgpt-to-write-me-a-year-end-review-heres-what-it-told-me/",
+        "published": "Thu, 11 Dec 2025 15:02:31 GMT",
+        "source": "Latest news",
+        "summary": "Most of it was flattery, but there was one bit of advice that I immediately decided to turn into a New Year's resolution."
+    },
+    {
+        "id": "https://www.zdnet.com/article/dell-14-premium-review/",
+        "title": "Are premium Windows laptops worth it in 2025? This Dell settled the debate for me",
+        "link": "https://www.zdnet.com/article/dell-14-premium-review/",
+        "published": "Thu, 11 Dec 2025 14:38:00 GMT",
+        "source": "Latest news",
+        "summary": "The latest Dell 14 Premium builds on the XPS legacy, offering a slim-fit, modern workstation for professionals and power users."
+    },
+    {
+        "id": "https://www.zdnet.com/article/withings-scanwatch-2-review/",
+        "title": "My favorite hybrid smartwatch has a 30-day battery life and a gorgeous look",
+        "link": "https://www.zdnet.com/article/withings-scanwatch-2-review/",
+        "published": "Thu, 11 Dec 2025 14:15:00 GMT",
+        "source": "Latest news",
+        "summary": "Withings' latest ScanWatch 2 model puts the company's health-tracking technology into a high-end, hybrid form factor."
+    },
+    {
+        "id": "https://www.cnbc.com/2025/12/11/disney-openai-sora-characters-video.html",
+        "title": "Disney making $1B investment in OpenAI, will allow characters on Sora AI",
+        "link": "https://www.cnbc.com/2025/12/11/disney-openai-sora-characters-video.html",
+        "published": "Thu, 11 Dec 2025 14:12:14 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46231585\">Comments</a>"
+    },
+    {
+        "id": "https://www.whathappened.tech/",
+        "title": "Show HN: WhatHappened \u2013 HN summaries, heatmaps, and contrarian picks",
+        "link": "https://www.whathappened.tech/",
+        "published": "Mon, 08 Dec 2025 19:55:08 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46196796\">Comments</a>"
     }
 ]
